contact form completed

--- a/index.html
+++ b/index.html
@@ -95,5 +95,13 @@
       I mean, seriously. It's like, woah. You know? It's like that.</p>
     <p class="author">- Tim Garcia</p>
   </section>
+
+  <section class="contact">
+    <form>
+      <input type="email" name="email" placeholder="Email">
+      <a href="#" class="btn">Subscribe now</a>      
+    </form>
+
+  </section>
 </body>
 </html>
