--- a/index.html
+++ b/index.html
@@ -99,9 +99,18 @@
   <section class="contact">
     <form>
       <input type="email" name="email" placeholder="Email">
-      <a href="#" class="btn">Subscribe now</a>      
+      <a href="#" class="btn">Subscribe now</a>
     </form>
 
   </section>
+  <footer>
+    <p>Images courtesy of <a href="http://unsplash.com/">unsplash</a>.</p>
+      <p>Why are you even reading this?! There's never anything interesting in the footer!</p>
+    <ul>
+      <li><a href="#"><i class="fab fa-twitter-square fa-2x"></i></a></li>
+      <li><a href="#"><i class="fab fa-facebook-square fa-2x"></i></a></li>
+      <li><a href="#"><i class="fab fa-snapchat-square fa-2x"></i></a></li>
+    </ul>
+  </footer>
 </body>
 </html>
